--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -167,6 +167,10 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
   color: #149ddd;
 }
+.active{
+  text-decoration: none;
+  color: #fff;
+}
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
