--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,15 +1,17 @@
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-body {
+body, html {
   font-family: "Open Sans", sans-serif !important;
   color: #272829;
-}
-html {
   scroll-behavior: smooth;
 }
-
+@media screen and (prefers-reduced-motion: no-preference) {
+  html,
+  body {
+    scroll-behavior: smooth;
+  }
+}
 a {
   color: #149ddd;
 }
@@ -19,8 +21,13 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif !important
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway", sans-serif !important;
 }
 
 /*--------------------------------------------------------------
@@ -28,7 +35,6 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
- 
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -45,7 +51,6 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 13px;
   left: 13px;
-  
 }
 
 .back-to-top:hover {
@@ -86,7 +91,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 
-#header .profile h1 a, #header .profile h1 a:hover {
+#header .profile h1 a,
+#header .profile h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
@@ -135,7 +141,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu * {
- 
   list-style: none;
 }
 
@@ -160,15 +165,18 @@ h1, h2, h3, h4, h5, h6 {
   color: #6f7180;
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active > a,
+.nav-menu li:hover > a {
   text-decoration: none;
   color: #fff;
 }
 
-.nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
+.nav-menu a:hover i,
+.nav-menu .active > a i,
+.nav-menu li:hover > a i {
   color: #149ddd;
 }
-
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
@@ -208,7 +216,8 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://www.formyoursoul.com/wp-content/uploads/2017/11/lo-lang-qua-nhieu.jpg") top center;
+  background: url("https://www.formyoursoul.com/wp-content/uploads/2017/11/lo-lang-qua-nhieu.jpg")
+    top center;
   background-size: cover;
 }
 
@@ -243,8 +252,6 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
-
-
 
 @media (min-width: 1024px) {
   #hero {
@@ -290,7 +297,7 @@ section {
 }
 
 .section-title h2::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 50px;
@@ -391,7 +398,7 @@ section {
   display: block;
   background: none;
 }
-.progress{
+.progress {
   margin-bottom: 15px;
 }
 
@@ -417,7 +424,7 @@ section {
 .skills .progress-bar {
   width: 1px;
   height: 10px;
-  transition: .9s;
+  transition: 0.9s;
   background-color: #149ddd;
 }
 
@@ -512,7 +519,8 @@ section {
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+.portfolio #portfolio-flters li:hover,
+.portfolio #portfolio-flters li.filter-active {
   color: #149ddd;
 }
 
@@ -664,7 +672,8 @@ section {
   margin: 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
   color: #c3e8fa;
   font-size: 26px;
 }
@@ -692,8 +701,6 @@ section {
   border-radius: 6px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
-
-
 
 @media (max-width: 767px) {
   .testimonials {
@@ -793,7 +800,8 @@ section {
   z-index: 1;
 }
 
-.portfolio-details .portfolio-details-carousel .owl-nav, .portfolio-details .portfolio-details-carousel .owl-dots {
+.portfolio-details .portfolio-details-carousel .owl-nav,
+.portfolio-details .portfolio-details-carousel .owl-dots {
   margin-top: 5px;
   text-align: left;
 }
